Fix/9084-qa-record-header-spacing-layout-records-with-special-status (#2159)
* style: Update spacing and layout on new public page

* style: Remove padding from first element and add gap

* fix: Add missing deprecated message

* style: Aligh names in mobile version

* fix: Remove whitespace and alig h2 tag

--- a/src/app/cdk/side-bar/side-bar/side-bar.component.scss
+++ b/src/app/cdk/side-bar/side-bar/side-bar.component.scss
@@ -19,10 +19,6 @@ app-panel {
   margin-top: 16px;
 }
 
-app-panel:first-of-type {
-  margin-top: 32px;
-}
-
 .orc-font-body {
   margin: unset;
 }
