--- a/src/app/record/components/record-header/record-header.component.scss
+++ b/src/app/record/components/record-header/record-header.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  padding: 32px;
+  padding: 32px 16px;
   margin-bottom: 32px;
   align-items: flex-start;
   word-break: break-all;
@@ -26,6 +26,8 @@
     }
 
     .names-wrapper {
+      gap: 8px;
+
       .names {
         line-height: 40px;
       }
@@ -76,6 +78,11 @@
 .record-header-wrapper.mobile {
   padding: 32px 16px;
   text-align: center;
+
+  .record-header {
+    justify-content: center;
+  }
+
   .names {
     justify-content: center;
   }
